2. Fix starting of per-user MPD instance.
3. For Qt-only Linux builds, set file permissions of config file so that others
   cannot read the file - as MPD, Magnatune, or DigitallyImported passwords
   will be saved here.
4. Fix reading of genres from cache file.
5. Fix updating of genres after DB is refreshed.
6. Dont use https for context view searches.
7. Work-around Windows and QJson issue.

1.1.0
-----
 1. Display 'Calculating...', and 'Deleting...' in cache settings page if
    relevant.
 2. Add "(Muted)" to volume button tooltip if volume is currently muted.
 3. If cover name contains %artist%, then replace with the album artist of the
    current song. Likewise for %album%
 4. Add option (to sidebar context menu) to toggle usage of monochrome icons.
 5. After ripping a CD, prompt as to whether to calculate ReplyGain.
 6. Simplify HTTP server settings. Now only the interface can be chosen. HTTP
    server is used for all non-MPD files. If computer has no, or only one,
    active network connection, then the HTTP server settings  page is hidden.
 7. Only show actions on mouse-over.
 8. Use larger action icons in icon view when we have larger previews.
 9. Better non-monochrome radio-stream icons. Thanks to Grely
10. Dont use alternating rows in views (does not look too great with grouped
    view). Use a fading divider instead.
11. Combine info and lyrics pages into a new context view. By default this is
    not placed in the sidebar, but has a toggle to show in the main view.
12. Remove EchoNest usage, as this only seems to return English results. Use
    wikipedia instead. Only the introduction is displayed by default. If no
    entry is found on wikipedia, then last.fm is consulted.
13. Dont display stream URL as sub-text, it makes the view look messy for no
    real gain. (URL is still shown in tooltip)
14. Detailed tree view for folders and playlists by default.
15. Remove config compatibility with Cantata versions older than 0.7